enhanced positions to have selling price
